# TacviewAnalyser

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  License  NSIS_inst_registry.nsh  NSIS_uninst_registry.nsh  README.md  app.rc  build_all.bat  conanfile.py  vcpkg.json
.github/workflows/: build.yml  hosted-pure-workflow.yml
TA_Cli/: CMakeLists.txt  NSIS_uninst_registry.nsh
TA_Cli/source/: main.cpp
TA_Cli/src/: main.cpp
TA_Com/: CMakeLists.txt
TA_Com/include/: logging.hpp  utils.hpp
TA_Com/source/: logging.cpp  utils.cpp
TA_Com/src/: logging.cpp  utils.cpp
TA_Lib/: CMakeLists.txt
TA_Lib/include/: sim_object.hpp  tac_file.hpp  utils.hpp
TA_Lib/src/: sim_object.cpp  tac_file.cpp  tac_file_load.cpp
TA_Srv/: CMakeLists.txt
cmake/: compiler_setup.cmake  utils.cmake
docs/: DB_schema.drawio
include/: TAWAServer.hpp  cache.hpp  data_service.hpp  file_line.hpp  global.hpp  server_configuration.hpp  sim_object.hpp  tac_file.hpp  utils.hpp
sql_scripts/: db_setup.sql
src/: TAWAServer.cpp  cache.cpp  data_service.cpp  main.cpp  server_configuration.cpp  sim_object.cpp  tac_file.cpp  tac_file_load.cpp  tac_file_load2.cpp  utils.cpp
